Adding the Header section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Penguine Fashion</title>
+
+    <!-- Google Font link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+
     <!-- Bootstrap CSS File -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
 
@@ -12,6 +21,91 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
+    <header>
+      <!-- Navbar Start -->
+      <section class="container-fluid penguine-hero-bg">
+        <div class="container-lg">
+          <!-- Navbar Start -->
+          <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#"
+                ><img
+                  src="assets/img/images/logo.png"
+                  width="290"
+                  height="40"
+                  alt="penguine-brand"
+              /></a>
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+              >
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                  <li class="nav-item penguine-list-items">
+                    <a class="nav-link active" aria-current="page" href="#"
+                      >Home</a
+                    >
+                  </li>
+                  <li class="nav-item penguine-list-items">
+                    <a class="nav-link" href="#">Products</a>
+                  </li>
+                  <li class="nav-item penguine-list-items">
+                    <a class="nav-link" href="#">Aboout Us</a>
+                  </li>
+                  <li class="nav-item penguine-list-items">
+                    <a class="nav-link" href="#">Contact Us</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+          <!-- Hero/Banner Start -->
+          <div
+            class="
+              row
+              d-flex
+              align-items-center
+              justify-content-between
+              py-5
+              ps-lg-3
+            "
+          >
+            <div class="col-lg-6 col-md-7 col-12 mb-4 mb-md-0">
+              <h1 class="penguine-sec-title hero-title">
+                <span class="penguine-fancy-text">Be the Penguins</span> <br />
+                of Winter
+              </h1>
+              <p class="penguine-paragraph">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry.
+              </p>
+              <button class="btn penguine-button">buy now</button>
+            </div>
+            <div class="col-lg-6 col-md-5 col-12">
+              <img
+                class="penguine-hero-model img-fluid mx-auto d-block"
+                src="assets/img/images/model.png"
+                alt="penguine-model-image"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Hero/Bannar Start -->
+    </header>
+
+    <main></main>
+
+    <footer></footer>
+
     <!-- Bootstrap JS File -->
     <script src="assets/js/bootstrap.min.js"></script>
   </body>
