adding the women jacket section

--- a/index.html
+++ b/index.html
@@ -102,7 +102,111 @@
       <!-- Hero/Bannar Start -->
     </header>
 
-    <main></main>
+    <main>
+      <!-- Women Jacket section Start -->
+      <section class="container py-5">
+        <div class="row mb-4">
+          <h2 class="penguine-sec-title">women jacket</h2>
+        </div>
+        <div class="container">
+          <div class="row row-cols-lg-3 row-cols-md-2 row-cols-1 g-5">
+            <div class="col">
+              <div class="card border-0 shadow p-3 pt-0 h-100">
+                <img
+                  src="assets/img/images/jacket-1.png"
+                  class="card-img-top p-3 women-jacket-img-bg"
+                  alt="Yellow Coat Jacket "
+                />
+                <div class="card-body ps-0">
+                  <h5 class="card-title penguine-card-title mb-2">
+                    Yellow Coat Jacket
+                  </h5>
+                  <p class="card-text penguine-paragraph">
+                    This is a longer card with supporting text below as a
+                    natural lead-in to additional content. This content is a
+                    little bit longer.
+                  </p>
+                  <!-- card footer button -->
+                  <div
+                    class="
+                      w-100
+                      d-flex
+                      align-items-center
+                      justify-content-between
+                    "
+                  >
+                    <h2 class="mb-0 penguine-fancy-text fs-2">$200</h2>
+                    <button href="" class="btn penguine-button">buy now</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card border-0 shadow p-3 pt-0 h-100">
+                <img
+                  src="assets/img/images/jacket-2.png"
+                  class="card-img-top p-3 women-jacket-img-bg"
+                  alt="Yellow Coat Jacket "
+                />
+                <div class="card-body ps-0">
+                  <h5 class="card-title penguine-card-title mb-2">
+                    Ladies Jacket
+                  </h5>
+                  <p class="card-text penguine-paragraph">
+                    This is a longer card with supporting text below as a
+                    natural lead-in to additional content. This content is a
+                    little bit longer.
+                  </p>
+                  <!-- card footer button -->
+                  <div
+                    class="
+                      w-100
+                      d-flex
+                      align-items-center
+                      justify-content-between
+                    "
+                  >
+                    <h2 class="mb-0 penguine-fancy-text fs-2">$200</h2>
+                    <button href="" class="btn penguine-button">buy now</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card border-0 shadow p-3 pt-0 h-100">
+                <img
+                  src="assets/img/images/jacket-3.png"
+                  class="card-img-top p-3 women-jacket-img-bg"
+                  alt="Yellow Coat Jacket "
+                />
+                <div class="card-body ps-0">
+                  <h5 class="card-title penguine-card-title mb-2">
+                    Woman Leather Jacket
+                  </h5>
+                  <p class="card-text penguine-paragraph">
+                    This is a longer card with supporting text below as a
+                    natural lead-in to additional content. This content is a
+                    little bit longer.
+                  </p>
+                  <!-- card footer button -->
+                  <div
+                    class="
+                      w-100
+                      d-flex
+                      align-items-center
+                      justify-content-between
+                    "
+                  >
+                    <h2 class="mb-0 penguine-fancy-text fs-2">$200</h2>
+                    <button href="" class="btn penguine-button">buy now</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
 
     <footer></footer>
 
