Adding the service and footer section

--- a/index.html
+++ b/index.html
@@ -206,9 +206,121 @@
           </div>
         </div>
       </section>
+      <!-- Service section start -->
+      <section class="container py-5">
+        <div
+          class="
+            row
+            d-flex
+            justify-content-center
+            align-items-center
+            flex-column-reverse flex-lg-row
+          "
+        >
+          <div class="col-lg-6 col-12">
+            <!-- left-card start -->
+            <div class="card mb-3 border-0 shadow p-3">
+              <div
+                class="
+                  row
+                  flex-md-row flex-column
+                  align-items-center
+                  text-center text-md-start
+                  g-0
+                "
+              >
+                <div class="col-2">
+                  <img
+                    src="assets/img/icons/image 12.png"
+                    class="img-fluid rounded-start service-img"
+                    alt="..."
+                  />
+                </div>
+                <div class="col-10">
+                  <div class="card-body">
+                    <h5 class="card-title">Find the Perfect Fit</h5>
+                    <p class="card-text">
+                      Everybody is different, which is why we offer styles for
+                      every body.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card mb-3 border-0 shadow p-3">
+              <div
+                class="
+                  row
+                  flex-md-row flex-column
+                  align-items-center
+                  text-center text-md-start
+                  g-0
+                "
+              >
+                <div class="col-2">
+                  <img
+                    src="assets/img/icons/image 13.png"
+                    class="img-fluid rounded-start service-img"
+                    alt="..."
+                  />
+                </div>
+                <div class="col-10">
+                  <div class="card-body">
+                    <h5 class="card-title">Free Exchanges</h5>
+                    <p class="card-text">
+                      Everybody is different, which is why we offer styles for
+                      every body.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card mb-3 border-0 shadow p-3">
+              <div
+                class="
+                  row
+                  flex-md-row flex-column
+                  align-items-center
+                  text-center text-md-start
+                  g-0
+                "
+              >
+                <div class="col-2">
+                  <img
+                    src="assets/img/icons/image 14.png"
+                    class="img-fluid rounded-start service-img"
+                    alt="..."
+                  />
+                </div>
+                <div class="col-10">
+                  <div class="card-body">
+                    <h5 class="card-title">Contact Our Seller</h5>
+                    <p class="card-text">
+                      Everybody is different, which is why we offer styles for
+                      every body.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- right part -->
+          <div class="col-lg-6 col-12 mb-5 mb-lg-0">
+            <img
+              src="assets/img/images/shopping.png"
+              alt="shopingPic"
+              class="img-fluid"
+            />
+          </div>
+        </div>
+      </section>
     </main>
 
-    <footer></footer>
+    <footer class="py-3 bg-dark text-light">
+      <p class="f-cpy text-center text-capitalize fs-6 m-0">
+        all &copy; reserved by programming-hero
+      </p>
+    </footer>
 
     <!-- Bootstrap JS File -->
     <script src="assets/js/bootstrap.min.js"></script>
